--- a/user-microservice-test.yaml
+++ b/user-microservice-test.yaml
@@ -1,2 +1,8 @@
-test:
-  config: My config test value profile
+spring:
+  datasource:
+    url: jdbc:h2:mem:testdb
+    username: sa
+    password:
+  h2:
+    console:
+      enabled: true
