--- a/order-microservice-test.yaml
+++ b/order-microservice-test.yaml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:h2:mem:testdb
     username: sa
-    password:
+    password: 1234567
   h2:
     console:
       enabled: true
